# msc-project-public

./: .gitignore  README.md  backlog.md  build.gradle  pyproject.toml  settings.gradle
.github/workflows/: build_jar.yaml  get_aws_prices.yaml  unittest_java.yaml  unittest_python.yaml
built-jars/: README.md
data/: README.md
data/2021-08/: data.eu-west-1.2021-08-01T00_05_30-07_00.xz  data.eu-west-1.2021-08-02T00_05_27-07_00.xz  data.eu-west-1.2021-08-03T00_05_31-07_00.xz  data.eu-west-1.2021-08-04T00_05_32-07_00.xz  data.eu-west-1.2021-08-05T00_05_28-07_00.xz  data.eu-west-1.2021-08-06T00_05_32-07_00.xz  data.eu-west-1.2021-08-07T00_05_32-07_00.xz  data.eu-west-1.2021-08-08T00_05_27-07_00.xz  data.eu-west-1.2021-08-09T00_05_31-07_00.xz  data.eu-west-1.2021-08-10T00_05_30-07_00.xz  data.eu-west-1.2021-08-11T00_05_28-07_00.xz  data.eu-west-1.2021-08-12T00_05_28-07_00.xz  data.eu-west-1.2021-08-13T00_05_31-07_00.xz  data.eu-west-1.2021-08-14T00_05_27-07_00.xz  data.eu-west-1.2021-08-15T00_05_31-07_00.xz  data.eu-west-1.2021-08-16T00_05_32-07_00.xz  data.eu-west-1.2021-08-17T00_05_32-07_00.xz  data.eu-west-1.2021-08-18T00_05_27-07_00.xz  data.eu-west-1.2021-08-19T00_05_29-07_00.xz  data.eu-west-1.2021-08-20T00_05_28-07_00.xz  data.eu-west-1.2021-08-21T00_05_32-07_00.xz  data.eu-west-1.2021-08-22T00_05_32-07_00.xz  data.eu-west-1.2021-08-23T00_05_28-07_00.xz  data.eu-west-1.2021-08-24T00_05_29-07_00.xz  data.eu-west-1.2021-08-24T00_05_32-07_00.xz  data.eu-west-1.2021-08-25T00_05_29-07_00.xz  data.eu-west-1.2021-08-26T00_05_28-07_00.xz  (+6 more)
data/latest/: README.md  (+4 more)
(+94 files in other folders)
