[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sklearn2pfa"
version = "0.0.1"
authors = [
  { name="Mark Petterson", email="xxxxxxx@gmail.com" },
]
description = "Converts machine learning models from scikit-learn to PFA format"
readme = "src/main/python/README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn == 1.1.1",
    "avro-json-serializer == 1.0.4",
    "avro-python3 == 1.10.2",
    "numpy==1.23.2",
    "scipy==1.9.1",
    "pandas==1.4.3"
]

# Support for declaring configurations not standardized by PEP 621
# (i.e. the [tool.setuptools] table), is still in beta stage and
# might change in future releases.
[tool.setuptools]
package-dir = {"" = "src/main/python"}
packages = ["sklearn2pfa"]
